# crm-system

./: .env.example  .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt
apps/audit-service/: Dockerfile  conftest.py  project.json  pytest.ini  requirements.txt
apps/audit-service/audit_project/: schema.py  settings.py  test_settings.py  urls.py  wsgi.py
apps/audit-service/logs/: __init__.py  admin.py  models.py
apps/audit-service/logs/management/commands/: __init__.py  consume_events.py
apps/audit-service/logs/tests/: __init__.py  test_consume_events.py
apps/crm-frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  project.json  tsconfig.json
apps/crm-frontend/src/: App.tsx  index.css
apps/crm-frontend/src/apollo/: client.ts
apps/crm-frontend/src/components/: ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  NotificationBell.tsx
apps/crm-frontend/src/context/: AuthContext.tsx
apps/crm-frontend/src/graphql/: mutations.ts  queries.ts
apps/crm-frontend/src/pages/: AuditLogsPage.tsx  CompaniesPage.tsx  CreateCustomerPage.tsx  CustomerDetailPage.tsx  CustomersPage.tsx  LoginPage.tsx  NotificationsPage.tsx
apps/crm-frontend/src/types/: generated.ts
apps/crm-service/: Dockerfile  conftest.py  project.json  pytest.ini  requirements.txt
apps/crm-service/crm_project/: schema.py  settings.py  test_settings.py  urls.py  wsgi.py
apps/crm-service/customers/: __init__.py  admin.py  models.py  mutations.py  views.py
apps/crm-service/customers/tests/: __init__.py  test_mutations.py  test_schema.py
apps/gateway/: Dockerfile  package.json  project.json
apps/gateway/src/: index.test.ts  index.ts
apps/geocode-worker/: Dockerfile  conftest.py  project.json  pyproject.toml  pytest.ini  requirements.txt
apps/geocode-worker/geocode_worker/: __init__.py  __main__.py  handler.py
apps/geocode-worker/geocode_worker/tests/: __init__.py  test_handler.py
apps/identity-service/: Dockerfile  conftest.py  project.json  pytest.ini  requirements.txt
apps/identity-service/companies/: __init__.py  admin.py  models.py
apps/identity-service/companies/migrations/: 0001_initial.py
apps/identity-service/companies/tests/: __init__.py  test_models.py
apps/identity-service/identity/: schema.py  settings.py  test_settings.py  urls.py  wsgi.py
apps/identity-service/users/: admin.py  models.py  mutations.py  views.py
apps/identity-service/users/management/commands/: seed_data.py
apps/identity-service/users/migrations/: 0001_initial.py  0002_add_missing_fields.py
apps/identity-service/users/tests/: test_models.py
apps/notification-service/: Dockerfile  conftest.py  manage.py  project.json  pytest.ini  requirements.txt
apps/notification-service/notification_project/: schema.py  settings.py  test_settings.py  urls.py  wsgi.py
apps/notification-service/notifications/: models.py  schema.py
apps/notification-service/notifications/management/commands/: consume_events.py
apps/notification-service/notifications/migrations/: 0001_initial.py
apps/notification-service/notifications/tests/: __init__.py  test_consume_events.py
libs/shared-python/: conftest.py  project.json  pytest.ini
libs/shared-python/shared_python/: __init__.py  geocoding.py  jwt_auth.py  kafka_client.py  managers.py
libs/shared-python/shared_python/tests/: __init__.py  test_kafka_client.py
scripts/: init-db.sh
scripts/docker-entrypoint-initdb.d/: create-multiple-databases.sh
